Ensure columns stack on mobile devices.

--- a/server/www/css/daylight.css
+++ b/server/www/css/daylight.css
@@ -92,6 +92,10 @@ input:focus {
   display: none;
 }
 
+.row > .col {
+  clear: both;
+}
+
 .spinner {
   display: none;
   text-align: center;
